--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ plugins {
 	id 'java'
 	id 'groovy'
 	id 'org.springframework.boot' version '2.7.1'
-	id 'org.springframework.experimental.aot' version '0.12.1'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'org.graalvm.buildtools.native' version '0.9.22'
 }
 
 group = 'io.github.joxebus'
@@ -16,14 +16,13 @@ configurations {
 }
 
 repositories {
-	maven { url 'https://repo.spring.io/release' }
 	mavenCentral()
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
-	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.1'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.2'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -36,7 +35,7 @@ dependencies {
 
 	// optional dependencies for using Spock
 	testImplementation "org.hamcrest:hamcrest-core:2.2"   // only necessary if Hamcrest matchers are used
-	testRuntimeOnly "net.bytebuddy:byte-buddy:1.11.0" // allows mocking of classes (in addition to interfaces)
+	testRuntimeOnly "net.bytebuddy:byte-buddy:1.14.2" // allows mocking of classes (in addition to interfaces)
 	testRuntimeOnly "org.objenesis:objenesis:3.2"      // allows mocking of classes without default constructor (together with ByteBuddy or CGLIB)
 }
 
