Mayor changes to include field from OpenAPI READ!!
This commit contains changes to include more fields on the configurations, also
the GralVM support has been removed since there was changes on the Spring Repository
but I'm working on a different implementation there are still issues, you can
see that on the branch `fix-native`.

Now this MockAPI support auth configuration, please refer to the Postman collection to see
the samples, when `secured` is set as true you need to specify the `Authorization` header on your
request with the password set on your configuration:

see: sample-api.yml
```
secured: true
authConfig: "am94ZWJ1czpNb2NrQVBJ"
```

--- a/docs/assets/samples/sample-api.yaml
+++ b/docs/assets/samples/sample-api.yaml
@@ -1,6 +1,18 @@
 ---
-name: "sample-api"
-operations:
+name: "secured-api-v2"
+description: "This is sample API to mock REST endpoint"
+termsOfService: "http://example.com/terms/"
+version: "1.0.1"
+contact:
+  name: "API Support"
+  url: "http://www.example.com/support"
+  email: "support@example.com"
+license:
+  name: "Apache 2.0"
+  url: "https://www.apache.org/licenses/LICENSE-2.0.html"
+secured: true
+authConfig: "am94ZWJ1czpNb2NrQVBJ"
+paths:
   GLOSARY:
     method: "get"
     headers:
