--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.1'
 	compileOnly 'org.projectlombok:lombok'
@@ -28,6 +29,7 @@ dependencies {
 
 	// mandatory dependencies for using Spock
 	testImplementation "org.codehaus.groovy:groovy:3.0.9"
+	testImplementation "org.codehaus.groovy:groovy-json:3.0.9"
 	testImplementation platform("org.spockframework:spock-bom:2.0-groovy-3.0")
 	testImplementation "org.spockframework:spock-core"
 	testImplementation "org.spockframework:spock-spring:2.1-M2-groovy-3.0"
